# proof

./: Cargo.toml  LICENSE.md  README.md  build.rs
src/: main.rs
src/lib/: mod.rs  ttablegen.rs
src/lib/assignments/: mod.rs
src/lib/notation/: chars.rs
src/util/: mod.rs  ttablegen.rs
src/util/assignments/: mod.rs
src/util/notation/: chars.rs  mod.rs
src/util/rsa/: mod.rs
